<resources>
  <string-array name="doctor_options">
    <item>Dr. Smith</item>
    <item>Dr. Jones</item>
    <item>Dr. Brown</item>
  </string-array>
  
  <string-array name="exam_options">
    <item>GE (Goûte Épaisse)</item>
    <item>IRM</item>
    <item>Colposcopie</item>
  </string-array>
  
  <string name="app_name">AFYA</string>
  <string name="register_name">Nouveau compte</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Afya</string>
  <string name="nav_header_subtitle">Une application de gestion hospitalière</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="account_settings">Mon compte</string>
  
  <string name="menu_home">Réception</string>
  <string name="menu_reception">Réception</string>
  <string name="menu_laboratory">Laboratoire</string>
  <string name="menu_files">Fiches</string>
  <string name="menu_rdv">Fiche de réception</string>
  <string name="menu_new_file">Nouvelle fiche de consultation</string>
  <string name="menu_new_lab">Publication des résultats Labo</string>
  <string name="menu_account">Mon Compte</string>
  <string name="logout_action">Déconnexion</string>
  <string name="img">Img</string>
  <string name="reception_text">Réception</string>
  <string name="consult_files_text">Fiches</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search_text">Rechercher</string>
  <string name="lab_text">Laboratoire</string>
  <string name="patient_label_text">Patient(e)</string>
  <string name="doctor_label_text">Médecin</string>
  <string name="rdv_reason_label_text">Motif</string>
  <string name="released_at_label_text">Date</string>
  <string name="biometric_search_text">Recherche Par Empreinte</string>
  <string name="name_text_label">Nom</string>
  <string name="lastname_text_label">Postnom</string>
  <string name="firstname_text_label">Prénom</string>
  <string name="sex_text_label">Sexe</string>
  <string name="age_text_label">Âge</string>
  <string name="doctor_text_label">Médecin</string>
  <string name="exam_text_label">Éxamen(s)</string>
  <string name="reason_text_label">Motif</string>
  <string name="background_text_label">Antécédents</string>
  <string name="particulary_mentions_text_label">Mentions particulières - Allergies, etc.</string>
  <string name="surgical_text_label">Chirurgicaux.</string>
  <string name="families_text_label">Familiaux</string>
  <string name="complement_text_label">Complément</string>
  <string name="conclusion_text_label">Conclusion</string>
  <string name="temperature_text_label">Température (T°)</string>
  <string name="weight_text_label">Poids (Kg)</string>
  <string name="blood_tension_text_label">Tension Artérielle (Cm Hg, …)</string>
  <string name="heart_rate_text_label">Fréquence Cardiaque (bpm, …)</string>
  <string name="oxygen_saturation_text_label">Saturation en Oxygène (SPO2, …)</string>
  <string name="observation_text_label">Observation(s) / Commentaire(s)</string>
  <string name="clinical_intelligence_text_label">Renseignement Clinic</string>
  <string name="description_text_label">Description</string>
  <string name="back_button_action">Revenir / Annuler</string>
  <string name="valid_text_label">Valider</string>
  <string name="reception_string">Fiche de réception</string>
  <string name="anamnesis_string">Anamnèse</string>
  <string name="lab_title_string">Laboratoire | Publication des résultats</string>
  <string name="result_string">Goûte Épaisse</string>
  <string name="normal_value_string">Valeur Normale</string>
  <string name="vital_signs_string">Signes Vitaux</string>
  <string name="hist_lb_title">Historique des résultats Labo</string>
  <string name="jean_dupont">Jean Dupont</string>
  <string name="dr_martin">Dr. Martin</string>
  <string name="_01_08_2024">01/08/2024</string>
  <string name="fiches_de_r_ception">Fiches de réception</string>
  <string name="tiquette">Étiquette</string>
  <string name="donn_e">Donnée</string>
  <string name="dupont">: Dupont</string>
  <string name="jean">: Jean</string>
  <string name="marie">: Marie</string>
  <string name="f_minin">: Féminin</string>
  <string name="_29_ans">: 29 ans</string>
  <string name="ge_go_te_paisse">GE (Goûte Épaisse)</string>
  <string name="r_sultat">Résultat</string>
  <string name="valeur_normal">Valeur Normal</string>
  <string name="colscopie">Colscopie</string>
  <string name="fiches_de_consultation">Fiches de consultation</string>
  <string name="title_activity_login">Authentification</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
  <string name="login_button_description">Login button</string>
  <string name="login_text_label">Se Connecter</string>
  <string name="password_text_label">* Mot de passe</string>
  <string name="confirm_password_text_label">Confirmation du mot de passe</string>
  <string name="full_text_label">* Nom complet</string>
  <string name="email_text_label">Email</string>
  <string name="phone_text_label">* N° de Téléphone</string>
  <string name="password_input_field_desc">Password input field</string>
  <string name="username_text_label">Username</string>
  <string name="username_2_text_label">* Username</string>
  <string name="username_input_field_desc">Username input field</string>
  <string name="biometric_authentication_text_label">Auth. Biométrique</string>
  <string name="biometric_data_text_label">Empreinte digitale</string>
  <string name="biometric_authentication_button_desc">Biometric authentication button</string>
  <string name="create_an_account_text_label">Créer un Compte</string>
  <string name="create_account_button_text_label">Create account button</string>
  <string name="patient_profile_desc">Patient profile</string>
  <string name="etiquette">Étiquette</string>
  <string name="donnee">Donnée</string>
  <string name="id_text_label">ID</string>
  <string name="heure_et_date">Heure et date</string>
  <string name="select_doctor">Sélectionner un Médecin</string>
  <string name="type_de_fiche">Type de fiche</string>
  <string name="diagnostic">Diagnostic</string>
</resources>
