<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".ui.gallery.NewLabResultFragment">
  
  <TextView
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/hello_blank_fragment" />
  
  <ScrollView
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fitsSystemWindows="true">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="search"
        android:hint="@string/search_text"
        android:inputType="text"
        android:background="@drawable/search_bar_background"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"/>
      
      <Button
        android:id="@+id/search_button_action"
        style="@style/PrimaryButtonStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_text"/>
      
      <Button
        android:id="@+id/biometric_search_button_action"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="@style/WarningButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometric_search_text"/>
      
      <androidx.cardview.widget.CardView
        android:id="@+id/card_view_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">
        
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
          
          <!-- Image du profil du patient -->
          <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_profile"
            android:contentDescription="@string/img"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"/>
          
          <!-- Tableau des détails du patient -->
          <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:layout_marginTop="8dp">
            
            <!-- En-tête des colonnes -->
            <TableRow
              android:background="@android:color/darker_gray">
              
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiquette"
                android:textStyle="bold"
                android:paddingEnd="8dp"
                android:textColor="@android:color/white"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donn_e"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>
            </TableRow>
            
            <!-- Nom -->
            <TableRow>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text_label"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dupont"/>
            </TableRow>
            
            <!-- Postnom -->
            <TableRow>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname_text_label"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jean"/>
            </TableRow>
            
            <!-- Prénom -->
            <TableRow>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname_text_label"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marie"/>
            </TableRow>
            
            <!-- Sexe -->
            <TableRow>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_text_label"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f_minin"/>
            </TableRow>
            
            <!-- Âge -->
            <TableRow>
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_text_label"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />
              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_29_ans"/>
            </TableRow>
          
          </TableLayout>
        </LinearLayout>
      </androidx.cardview.widget.CardView>
      
      <!-- Formulaire avec les champs à étiquette flottante -->
      <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@android:color/white">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="16dp">
          
          <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:text="@string/lab_title_string"/>
          
          <!-- **************************************************** -->
          <!-- **************************************************** -->
          
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView
              android:layout_marginEnd="30dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/ge_go_te_paisse"/>
            
            <EditText
              android:id="@+id/result"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:autofillHints="res"
              android:hint="@string/r_sultat"
              android:inputType="text" />
          
          </LinearLayout>
          
          <EditText
            android:id="@+id/normal_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="vn"
            android:hint="@string/valeur_normal"
            android:inputType="text" />
          
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            
            <TextView
              android:layout_marginEnd="30dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/colscopie"/>
            
            <EditText
              android:id="@+id/result2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:autofillHints=""
              android:hint="@string/r_sultat"
              android:inputType="text" />
          
          </LinearLayout>
          
          <EditText
            android:id="@+id/normal_value2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="vn"
            android:hint="@string/valeur_normal"
            android:inputType="text" />
          
          <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/conclusion"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textMultiLine"
              android:hint="@string/conclusion_text_label" />
          </com.google.android.material.textfield.TextInputLayout>
          
          <!-- **************************************************** -->
          <!-- **************************************************** -->
          
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="8dp">
            
            <!-- Espace entre les boutons -->
            <View
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"/>
            
            <Button
              android:id="@+id/back_button_action"
              style="@style/SecondaryButtonStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/back_button_action"/>
            
            <View
              android:layout_width="16dp"
              android:layout_height="wrap_content"/>
            
            <Button
              android:id="@+id/valid_rrdv_button_action"
              style="@style/PrimaryButtonStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/valid_text_label"/>
            
            <!-- Espace entre les boutons -->
            <View
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"/>
          
          </LinearLayout>
        
        </LinearLayout>
      </androidx.cardview.widget.CardView>
    
    
    </LinearLayout>
  
  </ScrollView>

</FrameLayout>