<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/register"
  tools:context=".ui.register.RegisterFragment">
  
  <ScrollView
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:isScrollContainer="true"
    tools:ignore="UselessParent">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center">
      
      <TextView
        android:id="@+id/toast_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp" />
      
      <!-- Champ pour le nom d'utilisateur -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/username_2_text_label"
          android:inputType="text"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/username_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <!-- Champ pour le mot de passe -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password_text_label"
          android:inputType="textPassword"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/password_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <!-- Champ pour la confirmation du mot de passe -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/repeat_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/confirm_password_text_label"
          android:inputType="textPassword"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/password_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <TextView
        android:id="@+id/errorTextView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/danger"
        android:layout_marginBottom="24dp" />
      
      <!-- Champ pour le nom complet -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/full_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/full_text_label"
          android:inputType="text"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/password_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <!-- Champ pour le N° de téléphone complet -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/phone_text_label"
          android:inputType="phone"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/password_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <!-- Champ pour l'adresse email -->
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:hintEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email_text_label"
          android:inputType="textEmailAddress"
          android:importantForAccessibility="yes"
          android:contentDescription="@string/password_input_field_desc"
          tools:ignore="ContentDescription" />
      </com.google.android.material.textfield.TextInputLayout>
      
      <!-- Bouton d'authentification biométrique avec icône -->
      <com.google.android.material.button.MaterialButton
        android:id="@+id/biometric_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_biometric"
        app:iconPadding="8dp"
        app:iconGravity="textStart"
        android:text="@string/biometric_data_text_label"
        style="@style/InfoButtonStyle"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/biometric_authentication_button_desc"/>
      
      <!-- Bouton de création avec icône -->
      <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/SuccessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_new_user"
        android:layout_marginBottom="24dp"
        app:iconPadding="8dp"
        app:iconGravity="textStart"
        android:text="@string/create_an_account_text_label"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/login_button_description"/>
      
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        
        <!-- Ligne à gauche -->
        <View
          android:id="@+id/line_left"
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/light"
          app:layout_constraintEnd_toStartOf="@+id/text"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintHorizontal_weight="1"
          tools:ignore="MissingConstraints" />
        
        <!-- Texte au milieu -->
        <TextView
          android:id="@+id/text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="AVEZ-VOUS UN COMPTE ?"
          android:textColor="#888888"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_chainStyle="packed"
          tools:ignore="MissingConstraints" />
        
        <!-- Ligne à droite -->
        <View
          android:id="@+id/line_right"
          android:layout_width="0dp"
          android:layout_height="1dp"
          android:background="@color/light"
          app:layout_constraintStart_toEndOf="@+id/text"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_weight="1"
          tools:ignore="MissingConstraints" />
      
      </androidx.constraintlayout.widget.ConstraintLayout>
      
      <!-- Bouton pour créer un compte avec icône -->
      <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/ic_login"
        app:iconPadding="8dp"
        app:iconGravity="textStart"
        android:text="@string/login_text_label"
        android:importantForAccessibility="yes"
        style="@style/PrimaryButtonStyle"
        android:contentDescription="@string/create_account_button_text_label"/>
    
    </LinearLayout>
  
  </ScrollView>

</FrameLayout>
